# validador-api

./: CMakeLists.txt  README.md  index.html
src/: main.cpp  validator.cpp  validator.h
